# OmniRoute

./: .gitignore  README.md  alembic.ini  pyproject.toml
control_plane/app/: __init__.py  analytics.py  audit.py  audit_sql.py  billing.py  capacity.py  completer.py  config.py  db.py  deps.py  main.py  pricing.py  ratelimit.py  rbac.py  routing.py  schemas.py  sso.py  store.py  store_sql.py  usage.py  usage_sql.py
control_plane/app/routes/: admin.py  analytics.py  chat.py
control_plane/tests/: conftest.py
control_plane/tests/contract/: test_admin.py  test_analytics_api.py  test_audit_api.py  test_budget_and_models.py  test_chat_completions.py  test_sqlite_app.py
control_plane/tests/golden/: invoice_acme_2026-07.txt
control_plane/tests/unit/: test_analytics.py  test_audit.py  test_billing.py  test_capacity.py  test_persistence_sql.py  test_pricing.py  test_ratelimit.py  test_rbac.py  test_routing.py  test_sso.py  test_store.py  test_store_sql.py  test_usage.py
doc/: implementation-plan.md  system-design.md
gateway/: config.multiregion.yaml  config.yaml
load/: locustfile.py
migrations/: env.py
migrations/versions/: a45246ae9f46_initial_schema.py
