[project]
name = "omniroute"
version = "0.1.0"
description = "OmniRoute — a multi-provider LLM API gateway built on LiteLLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "litellm>=1.52",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
pythonpath = ["control_plane"]
testpaths = ["control_plane/tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["control_plane"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["app"]
